# routes/public-routes.php
@@ -1,7 +1,8 @@
 <?php
 return [
-    '/login',
-    '/register',
-    '/recover',
     '/health',
+    '/auth/login',
+    '/auth/register',
+    '/auth/forgot-password',
+    '/auth/reset-password',
 ];
